[project]
name = "intelx"
version = "0.6.2"
authors = [
  { name="Kleissner Investments s.r.o./ Dominik Penner", email="info@intelx.io" },
]
description = "IntelX is a Python command-line utility and API wrapper for intelx.io, made to perform any kind of open-source intelligence."
readme = "README.md"
requires-python = ">=3.9"
keywords =["intelx", "intelligence x", "intelx.io", "_IntelligenceX", "IntelligenceX", "_intelx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pygments",
    "termcolor",
    "tabulate"
]

[build-system]
requires = ["setuptools>=61.0",'requests','pygments','termcolor','tabulate'] 
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/IntelligenceX/SDK/tree/master/Python"
"Bug Tracker" = "https://github.com/IntelligenceX/SDK/issues"

[tool.setuptools]
package-dir = {"" = "intelx"}
script-files = ["scripts/intelx.py"]