[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pygments",
    "requests",
    "setuptools>=61.0",
    "tabulate",
    "termcolor",
]

[project]
authors = [
    { email = "info@intelx.io", name = "Kleissner Investments s.r.o./ Dominik Penner" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygments",
    "requests",
    "tabulate",
    "termcolor",
]
description = "IntelX is a Python command-line utility and API wrapper for intelx.io, made to perform any kind of open-source intelligence."
keywords = [
    "IntelligenceX",
    "_IntelligenceX",
    "_intelx",
    "intelligence x",
    "intelx",
    "intelx.io",
]
name = "intelx"
readme = "README.md"
requires-python = ">=3.9"
version = "0.6.3"

[project.urls]
"Bug Tracker" = "https://github.com/IntelligenceX/SDK/issues"
Homepage = "https://github.com/IntelligenceX/SDK/tree/master/Python"

[tool.setuptools]
script-files = [
    "scripts/intelx.py",
]

[tool.setuptools.package-dir]
"" = "intelx"
